Add support for injecting interrupts and start an evaluation
